--- a/Web-API/説明.md
+++ b/Web-API/説明.md
@@ -1,2 +1,11 @@
 # WebAPIとDB間の基本シーケンス図
+
+****
+## 種類
 [POST](./API-DB_POST%E5%9F%BA%E6%9C%AC%E3%82%B7%E3%83%BC%E3%82%B1%E3%83%B3%E3%82%B9.md)
+
+[PUT](./API-DB_PUT%E5%9F%BA%E6%9C%AC%E3%82%B7%E3%83%BC%E3%82%B1%E3%83%B3%E3%82%B9.md)
+
+[GET](./API-DB_GET%E5%9F%BA%E6%9C%AC%E3%82%B7%E3%83%BC%E3%82%B1%E3%83%B3%E3%82%B9.md)
+
+[DELETE](./API-DB_DELETE%E5%9F%BA%E6%9C%AC%E3%82%B7%E3%83%BC%E3%82%B1%E3%83%B3%E3%82%B9.md)
